[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-thisweek"
version = "0.1.1"
description = "A simple MCP (Model Context Protocol) that returns the dates from Monday to Friday of this week, and today's date."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "fastmcp>=0.4.1"
]
